==> arctic603/intelligent_door_monitor/door_monitor_BLE/TEMPLATE/HARDWARE/OLED/OLED.c <==
#include "OLED.h"
#define SCL_W	PDout(9)
#define SDA_W	PEout(15)
#define SDA_R	PEin(15)

void IIC_Start(void)
{
	//保证SDA引脚为输出模式
	sda_pin_mode(GPIO_Mode_OUT);
	
	SCL_W=1;
	SDA_W=1;
	delay_xus(5);

	SDA_W=0;
	delay_xus(5);
	
	
	SCL_W=0;
	delay_xus(5);		//钳住I2C总线

}

void IIC_Stop(void)
{
	//保证SDA引脚为输出模式
	sda_pin_mode(GPIO_Mode_OUT);	
	
	SCL_W=1;
	SDA_W=0;
	delay_xus(5);

	SDA_W=1;
	delay_xus(5);
	
}

void Write_IIC_Byte(unsigned char IIC_Byte)
{

	int32_t i;
	
	//保证SDA引脚为输出模式
	sda_pin_mode(GPIO_Mode_OUT);	
	
	SCL_W=0;
	SDA_W=0;
	delay_xus(5);

	for(i=7; i>=0; i--)
	{
		//先更改SDA引脚的电平
		if(IIC_Byte & (1<<i))
		{
			SDA_W=1;
		
		}
		else
		{
			SDA_W=0;
		}
		
		delay_xus(5);
		
		SCL_W=1;
		delay_xus(5);
		
		
		SCL_W=0;
		delay_xus(5);	
	}

}

void OLED_WR_Byte(unsigned dat,unsigned cmd)
{
	if(cmd)
	{
        Write_IIC_Data(dat);	
    }
	else {
        Write_IIC_Command(dat);
	}

}
